force-app/main/default/objects/Management_Approval_Request__c/Management_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Management Approval Request</label>
    <nameField>
        <displayFormat>MAR-{0000}</displayFormat>
        <label>Management Approval Request through SFDC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Approval Request</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>