force-app/main/default/objects/Management_Approval_Request__c/fields/Admin_fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_fee__c</fullName>
    <label>Admin fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>