force-app/main/default/objects/Management_Approval_Request__c/fields/Applicant_Names__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Names__c</fullName>
    <formula>Booking__r.Primary_Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Names</label>
    <type>Text</type>
</CustomField>