force-app/main/default/objects/Management_Approval_Request__c/fields/Booking_source__c.field-meta.xml
<CustomField>
    <fullName>Booking_source__c</fullName>
    <formula>TEXT(Booking__r.Source_of_Booking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking source</label>
    <type>Text</type>
</CustomField>