force-app/main/default/objects/Management_Approval_Request__c/fields/Broker_commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_commission__c</fullName>
    <label>Broker commission</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>