force-app/main/default/objects/Management_Approval_Request__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>Booking__r.Channel_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Name</label>
    <type>Text</type>
</CustomField>