force-app/main/default/objects/Management_Approval_Request__c/fields/Category_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Category_of_issue__c</fullName>
    <label>Category of issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation and Swap</fullName>
            </value>
            <value>
                <fullName>Cancellation and Forfeiture</fullName>
            </value>
            <value>
                <fullName>Cancellation and Refund</fullName>
            </value>
            <value>
                <fullName>Approval for Rebate/Discount</fullName>
            </value>
            <value>
                <fullName>Approval for Payment Plan Change</fullName>
            </value>
            <value>
                <fullName>Approval for Ownership Change</fullName>
            </value>
            <value>
                <fullName>Approval of Name Addition/Deletion</fullName>
            </value>
            <value>
                <fullName>Approval for Refund/Reimbursement/Compensation</fullName>
            </value>
            <value>
                <fullName>Approval for Movement of Funds/Reallocation</fullName>
            </value>
            <value>
                <fullName>Approval For Waiver</fullName>
            </value>
            <value>
                <fullName>Approval For Early Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>