force-app/main/default/objects/Management_Approval_Request__c/fields/CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>CRM_Executive__c</fullName>
    <formula>/*Booking__r.Unit__r.Tower__r.CRM_Executive__r.FirstName   + &apos; &apos; +  Booking__r.Unit__r.Tower__r.CRM_Executive__r.LastName*/
 Booking__r.CRM_Executive__r.FirstName + &apos; &apos; +  Booking__r.CRM_Executive__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Executive</label>
    <type>Text</type>
</CustomField>