force-app/main/default/objects/Management_Approval_Request__c/fields/Late_payment_charges__c.field-meta.xml
<CustomField>
    <fullName>Late_payment_charges__c</fullName>
    <label>Late payment charges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>