force-app/main/default/objects/Management_Approval_Request__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>Booking__r.Paid_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>