force-app/main/default/objects/Management_Approval_Request__c/fields/Sales_Head_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_VP__c</fullName>
    <formula>Booking__r.Secondary_Sales_Manager_VP__r.FirstName  + &apos; &apos;  +  Booking__r.Secondary_Sales_Manager_VP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head VP</label>
    <type>Text</type>
</CustomField>