force-app/main/default/objects/Management_Approval_Request__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>Booking__r.Sales_Managers__r.FirstName  + &apos; &apos;  +  Booking__r.Sales_Managers__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>