force-app/main/default/objects/Management_Approval_Request__c/fields/Sales_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sales_Remarks__c</fullName>
    <label>Sales Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>