force-app/main/default/objects/Management_Approval_Request__c/fields/Spot_cash__c.field-meta.xml
<CustomField>
    <fullName>Spot_cash__c</fullName>
    <label>Spot cash</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>