force-app/main/default/objects/Management_Approval_Request__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Broker_commission__c  +  Admin_fee__c  +  Sales_incentives__c   +  Late_payment_charges__c  +  Spot_cash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>