force-app/main/default/objects/Management_Approval_Request__c/listViews/Approved_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Requests</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Category_of_issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Requests</label>
</ListView>