force-app/main/default/objects/Management_Approval_Request__c/listViews/Pending_From_Dinesh_Dua_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_From_Dinesh_Dua_Requests</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Category_of_issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending From Dinesh Dua</value>
    </filters>
    <label>Pending from Dinesh Dua Requests</label>
</ListView>