force-app/main/default/objects/Management_Approval_Request__c/listViews/Pending_From_Mohammad_Adnan_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_From_Mohammad_Adnan_Requests</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Category_of_issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending From Mohammad Adnan Hamid</value>
    </filters>
    <label>Pending from Mohammad Adnan Requests</label>
</ListView>